--- a/pages/19113.html
+++ b/pages/19113.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/8437/#Item_18" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8437/#Item_21" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -531,6 +531,8 @@ margin-left: 0em;
 </center>
 <p>This is obtained from the subgroup lattice as shown on <a href="https://people.maths.bris.ac.uk/~matyd/GroupNames/">GroupNames</a> for <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mn>2</mn><mi>I</mi><mo>≃</mo></mrow><annotation encoding="application/x-tex">2I \simeq</annotation></semantics></math> <a href="https://people.maths.bris.ac.uk/~matyd/GroupNames/97/SL(2,5).html">SL(2,5)</a> and <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mn>2</mn><mi>O</mi><mo>≃</mo></mrow><annotation encoding="application/x-tex">2O \simeq </annotation></semantics></math> <a href="https://people.maths.bris.ac.uk/~matyd/GroupNames/1/CSU(2,3).html">CSU(2,3)</a></p>
 
+<p>See also <a href="#GoncalvesGuaschi11">Goncalves-Guaschi 11, appendix</a>.</p>
+
 <h3 id="GroupCohomology">Group cohomology</h3>
 
 <div class="num_prop" id="GroupCohomologyOfFiniteSubgroupsOfSU2">
@@ -641,8 +643,6 @@ margin-left: 0em;
 <li id="Serrano14">Javier Carrasco Serrano, <em>Finite subgroups of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>SL</mi><mo stretchy="false">(</mo><mn>2</mn><mo>,</mo><mi>ℂ</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">SL(2,\mathbb{C})</annotation></semantics></math> and <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>SL</mi><mo stretchy="false">(</mo><mn>3</mn><mo>,</mo><mi>ℂ</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">SL(3,\mathbb{C})</annotation></semantics></math></em>, Warwick 2014 (<a href="https://homepages.warwick.ac.uk/~masda/McKay/Carrasco_Project.pdf">pdf</a>)</li>
 </ul>
 
-<p>Lecture notes include the following:</p>
-
 <p>Complete proof of the classification of the finite subgroups of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>SO</mi><mo stretchy="false">(</mo><mn>3</mn><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">SO(3)</annotation></semantics></math> is also spelled out in</p>
 
 <ul>
@@ -661,10 +661,10 @@ margin-left: 0em;
 <li>GroupProps <em><a href="https://groupprops.subwiki.org/wiki/Classification_of_finite_subgroups_of_SO(3,R)">Classification of finite subgroups of SO(3,R)</a></em></li>
 </ul>
 
-<p>Further discussion of the <a class="existingWikiWord" href="/nlab/show/lattice">lattice</a> of <a class="existingWikiWord" href="/nlab/show/subgroups">subgroups</a> is in</p>
+<p>Discussion of the <a class="existingWikiWord" href="/nlab/show/lattice">lattice</a> of <a class="existingWikiWord" href="/nlab/show/subgroups">subgroups</a> of the three exceptional subgroups is in</p>
 
 <ul>
-<li><em>The Subgroups of the Binary Polyhedral Groups</em> (<a href="https://link.springer.com/content/pdf/bbm%3A978-3-319-00257-6%2F1.pdf">pdf</a>)</li>
+<li id="GoncalvesGuaschi11">Daciberg Lima Gonçalves, John Guaschi, <em>The Subgroups of the Binary Polyhedral Groups</em>, Appendix of <em>The classification of the virtually cyclic subgroups of the sphere braid groups</em>, Springer (Ed.) (2013) 112 (<a href="https://arxiv.org/abs/1110.6628">arXiv:1110.6628</a>, <a href="https://link.springer.com/content/pdf/bbm%3A978-3-319-00257-6%2F1.pdf">pdf</a>)</li>
 </ul>
 
 <p>The <a class="existingWikiWord" href="/nlab/show/universal+higher+central+extension">universal higher central extension</a> of finite subgroups of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>SU</mi><mo stretchy="false">(</mo><mn>2</mn><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">SU(2)</annotation></semantics></math> (“<a class="existingWikiWord" href="/nlab/show/Platonic+2-groups">Platonic 2-groups</a>”) are discussed in</p>
@@ -678,14 +678,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October  8, 2018 at 11:20:52.
+  Last revised on October  8, 2018 at 13:18:09.
   See the <a href="https://ncatlab.org/nlab/history/finite rotation group" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/finite+rotation+group" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/finite+rotation+group/16" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(16 revisions)</span> | <a href="/nlab/show/diff/finite+rotation+group" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/finite+rotation+group" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/finite+rotation+group" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/finite+rotation+group/17" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(17 revisions)</span> | <a href="/nlab/show/diff/finite+rotation+group" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/finite+rotation+group" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/finite rotation group/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
