--- a/pages/1788.html
+++ b/pages/1788.html
@@ -311,6 +311,8 @@ margin-left: 0em;
 <body>
 <p><a class="existingWikiWord" href="/nlab/show/cyclotomic+field">cyclotomic field</a><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>ℚ</mi><mo stretchy="false">(</mo><msub><mi>ζ</mi> <mn>3</mn></msub><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">\mathbb{Q}(\zeta_3)</annotation></semantics></math></p>
 
+<p><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mstyle mathcolor="blue"><mi>xxx</mi></mstyle></mrow><annotation encoding="application/x-tex">\color{blue} xxx</annotation></semantics></math></p>
+
 <h2 id="table">Table</h2>
 <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><mstyle mathcolor="purple"><semantics><mrow><mi>n</mi><mo>\</mo><mi>k</mi></mrow><annotation encoding="application/x-tex">n\backslash k</annotation></semantics></mstyle></math></body></html>
 
@@ -318,14 +320,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October  8, 2018 at 17:59:03.
+  Last revised on October  9, 2018 at 01:32:14.
   See the <a href="https://ncatlab.org/nlab/history/Sandbox" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1696" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1696 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1697" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1697 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Sandbox/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
