--- a/pages/19755.html
+++ b/pages/19755.html
@@ -573,7 +573,7 @@ margin-left: 0em;
 <p>Textbook accounts include</p>
 
 <ul>
-<li id="Sagan01">Bruce Sagan, <em>The symmetric group</em>, Springer 2001 (<a href="http://math.sfsu.edu/federico/Clase/RepTh/sagan.pdf">pdf</a>)</li>
+<li id="Sagan01"><a class="existingWikiWord" href="/nlab/show/Bruce+Sagan">Bruce Sagan</a>, <em>The symmetric group</em>, Springer 2001 (<a href="http://math.sfsu.edu/federico/Clase/RepTh/sagan.pdf">pdf</a>)</li>
 </ul>
 
 <p>See also</p>
@@ -587,14 +587,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October  8, 2018 at 08:49:41.
+  Last revised on October  9, 2018 at 02:24:58.
   See the <a href="https://ncatlab.org/nlab/history/symmetric group" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/symmetric+group" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/symmetric+group/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/symmetric+group" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/symmetric+group" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/symmetric+group" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/symmetric+group/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/symmetric+group" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/symmetric+group" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/symmetric group/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
