--- a/pages/19765.html
+++ b/pages/19765.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      Bruce Sagan in nLab
+      Bruce E. Sagan in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -284,7 +284,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      Bruce Sagan
+      Bruce E. Sagan
   </h1>
 
 
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9127/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -308,40 +308,40 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <html xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" xml:lang="en" lang="en">
-<head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title></title></head>
-<body>
+    <p>
+</p>
+
 <ul>
 <li>
-<p><a href="http://users.math.msu.edu/users/sagan/">MSU home page</a></p>
+<p><a href='http://users.math.msu.edu/users/sagan/'>MSU home page</a></p>
 </li>
 
 <li>
-<p><a href="https://en.wikipedia.org/wiki/Bruce_Sagan">Wikipedia page</a></p>
+<p><a href='https://en.wikipedia.org/wiki/Bruce_Sagan'>Wikipedia page</a></p>
 </li>
 </ul>
-<div class="property">category: <a class="category_link" href="/nlab/all_pages/people">people</a></div></body></html>
 
+<p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
 </div>
 
 <div class="revisedby">
   <p>
-  Created on October  9, 2018 at 02:32:04.
-  See the <a href="https://ncatlab.org/nlab/history/Bruce Sagan" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  Last revised on October  9, 2018 at 03:52:50.
+  See the <a href="https://ncatlab.org/nlab/history/Bruce E. Sagan" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Bruce+Sagan" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
-  | <a href="https://ncatlab.org/nlab/show/Bruce Sagan/cite" style="color: black">Cite</a>
+  <a href="/nlab/edit/Bruce+E.+Sagan" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Bruce+E.+Sagan/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Bruce+E.+Sagan" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Bruce+E.+Sagan" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/Bruce E. Sagan/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
-    <a href="/nlab/print/Bruce+Sagan" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/Bruce+E.+Sagan" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/Bruce+Sagan" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/Bruce+E.+Sagan" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/Bruce+Sagan" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/Bruce+E.+Sagan" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
