--- a/pages/19765.html
+++ b/pages/19765.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      Bruce E. Sagan in nLab
+      Bruce Eli Sagan in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -284,7 +284,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      Bruce E. Sagan
+      Bruce Eli Sagan
   </h1>
 
 
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9127/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9127/#Item_3" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -309,6 +309,7 @@ margin-left: 0em;
 
 <div id="revision">
     <p>
+ 
 </p>
 
 <ul>
@@ -326,22 +327,22 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October  9, 2018 at 03:52:50.
-  See the <a href="https://ncatlab.org/nlab/history/Bruce E. Sagan" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  Last revised on October  9, 2018 at 07:10:07.
+  See the <a href="https://ncatlab.org/nlab/history/Bruce Eli Sagan" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Bruce+E.+Sagan" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Bruce+E.+Sagan/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Bruce+E.+Sagan" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Bruce+E.+Sagan" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  | <a href="https://ncatlab.org/nlab/show/Bruce E. Sagan/cite" style="color: black">Cite</a>
+  <a href="/nlab/edit/Bruce+Eli+Sagan" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Bruce+Eli+Sagan/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Bruce+Eli+Sagan" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Bruce+Eli+Sagan" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/Bruce Eli Sagan/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
-    <a href="/nlab/print/Bruce+E.+Sagan" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/Bruce+Eli+Sagan" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/Bruce+E.+Sagan" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/Bruce+Eli+Sagan" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/Bruce+E.+Sagan" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/Bruce+Eli+Sagan" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
