--- a/pages/19719.html
+++ b/pages/19719.html
@@ -408,6 +408,8 @@ margin-left: 0em;
 <li><span class="newWikiWord">tslil clingman<a href="/nlab/new/tslil+clingman">?</a></span></li>
 
 <li><a class="existingWikiWord" href="/nlab/show/Tamara+von+Glehn">Tamara von Glehn</a></li>
+
+<li><a class="existingWikiWord" href="/nlab/show/Nicolai+Kraus">Nicolai Kraus</a></li>
 </ul>
 
 <h2 id="plans">Plans</h2>
@@ -419,14 +421,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October  7, 2018 at 11:30:21.
+  Last revised on October  9, 2018 at 08:11:27.
   See the <a href="https://ncatlab.org/nlab/history/Initiality Project" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Initiality+Project" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Initiality+Project/28" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(28 revisions)</span> | <a href="/nlab/show/diff/Initiality+Project" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Initiality+Project" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Initiality+Project" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Initiality+Project/29" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(29 revisions)</span> | <a href="/nlab/show/diff/Initiality+Project" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Initiality+Project" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Initiality Project/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
