--- a/pages/6237.html
+++ b/pages/6237.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/2839/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/2839/#Item_3" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -591,6 +591,12 @@ margin-left: 0em;
 <li><a class="existingWikiWord" href="/nlab/show/Michael+Hopkins">Michael Hopkins</a>, <a class="existingWikiWord" href="/nlab/show/Nicholas+Kuhn">Nicholas Kuhn</a>, <a class="existingWikiWord" href="/nlab/show/Douglas+Ravenel">Douglas Ravenel</a>, <em>Generalized group characters and complex oriented cohomology theories</em>, J. Amer. Math. Soc. 13 (2000), 553-594 (<a href="http://www.ams.org/journals/jams/2000-13-03/S0894-0347-00-00332-5/">publisher</a>, <a href="http://www.math.rochester.edu/people/faculty/doug/mypapers/hkr.pdf">pdf</a>)</li>
 </ul>
 
+<p>for review see</p>
+
+<ul>
+<li id="Raksit15">Arpon Raksit, <em>Characters in global equivariant homotopy theory</em>, 2015 <a href="http://web.stanford.edu/~arpon/math/files/senior-thesis.pdf">pdf</a></li>
+</ul>
+
 <p>Examples of characters of <a class="existingWikiWord" href="/nlab/show/finite+groups">finite groups</a> are discussed and listed at</p>
 
 <ul>
@@ -602,14 +608,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October  8, 2018 at 08:49:10.
+  Last revised on October 10, 2018 at 03:59:23.
   See the <a href="https://ncatlab.org/nlab/history/character" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/character" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/character/26" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(26 revisions)</span> | <a href="/nlab/show/diff/character" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/character" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/character" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/character/27" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(27 revisions)</span> | <a href="/nlab/show/diff/character" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/character" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/character/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
