--- a/pages/7728.html
+++ b/pages/7728.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/3867/#Item_5" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/3867/#Item_7" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -384,7 +384,7 @@ margin-left: 0em;
 
 <h2 id="FormalizationInCategoryTheoryAndTypeTheory">Formalization of structuralism in category theory and type theory</h2>
 
-<p>Since in a <a class="existingWikiWord" href="/nlab/show/category">category</a>, the nature of any <a class="existingWikiWord" href="/nlab/show/object">object</a> is determined only by the system of <em><a class="existingWikiWord" href="/nlab/show/morphisms">morphisms</a></em> which relate this object to the other objects of the category (by the <a class="existingWikiWord" href="/nlab/show/Yoneda+lemma">Yoneda lemma</a>), and not by how the object itself is <a class="existingWikiWord" href="/nlab/show/generators+and+relations">presented</a> (if it is at all), it may be argued that <a class="existingWikiWord" href="/nlab/show/category+theory">category theory</a> provides a formalization of philosophical structuralism, at least in the <a class="existingWikiWord" href="/nlab/show/philosophy+of+mathematics">philosophy of mathematics</a> (<a href="#Awodey96">Awodey 96</a>, <a href="#Awodey03">Awodey 03</a>). <a class="existingWikiWord" href="/nlab/show/Yuri+Manin">Yuri Manin</a> said (citation?) that <a class="existingWikiWord" href="/nlab/show/category+theory">category theory</a> regards <a class="existingWikiWord" href="/nlab/show/objects">objects</a> as part of a “society”. (See also at <em><a class="existingWikiWord" href="/nlab/show/objective+logic">objective logic</a></em> for more on <a class="existingWikiWord" href="/nlab/show/categorical+logic">categorical logic</a> and <a class="existingWikiWord" href="/nlab/show/philosophy">philosophical</a> notions.)</p>
+<p>Since in a <a class="existingWikiWord" href="/nlab/show/category">category</a>, the nature of any <a class="existingWikiWord" href="/nlab/show/object">object</a> is determined only by the system of <em><a class="existingWikiWord" href="/nlab/show/morphisms">morphisms</a></em> which relate this object to itself and to the other objects of the category (by the <a class="existingWikiWord" href="/nlab/show/Yoneda+lemma">Yoneda lemma</a>), and not by how the object itself is <a class="existingWikiWord" href="/nlab/show/generators+and+relations">presented</a> (if it is at all), it may be argued that <a class="existingWikiWord" href="/nlab/show/category+theory">category theory</a> provides a formalization of philosophical structuralism, at least in the <a class="existingWikiWord" href="/nlab/show/philosophy+of+mathematics">philosophy of mathematics</a> (<a href="#Awodey96">Awodey 96</a>, <a href="#Awodey03">Awodey 03</a>). <a class="existingWikiWord" href="/nlab/show/Yuri+Manin">Yuri Manin</a> said (citation?) that <a class="existingWikiWord" href="/nlab/show/category+theory">category theory</a> regards <a class="existingWikiWord" href="/nlab/show/objects">objects</a> as part of a “society”. (See also at <em><a class="existingWikiWord" href="/nlab/show/objective+logic">objective logic</a></em> for more on <a class="existingWikiWord" href="/nlab/show/categorical+logic">categorical logic</a> and <a class="existingWikiWord" href="/nlab/show/philosophy">philosophical</a> notions.)</p>
 
 <p>Notice that the terminology <em><a class="existingWikiWord" href="/nlab/show/morphism">morphism</a></em> of course originates in <em><a class="existingWikiWord" href="/nlab/show/homomorphism">homomorphism</a></em>, since the morphisms in a category of <a class="existingWikiWord" href="/nlab/show/mathematical+structures">mathematical structures</a> (such as <a class="existingWikiWord" href="/nlab/show/groups">groups</a>, <a class="existingWikiWord" href="/nlab/show/modules">modules</a>, etc.) are precisely the maps of the underlying <a class="existingWikiWord" href="/nlab/show/sets">sets</a> that preserve this structure.</p>
 
@@ -443,14 +443,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 10, 2018 at 03:34:13.
+  Last revised on October 10, 2018 at 06:11:40.
   See the <a href="https://ncatlab.org/nlab/history/structuralism" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/structuralism" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/structuralism/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/structuralism" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/structuralism" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/structuralism" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/structuralism/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/structuralism" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/structuralism" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/structuralism/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
