--- a/pages/1866.html
+++ b/pages/1866.html
@@ -912,7 +912,7 @@ margin-left: 0em;
 </li>
 
 <li id="Zhou01">
-<p>Jian-Ge Zhou, <em>D-branes in B Fields</em> (<a href="https://arxiv.org/abs/hep-th/0102178">arXiv:hep-th/0102178</a>)</p>
+<p>Jian-Ge Zhou, <em>D-branes in B Fields</em>, Nucl.Phys. B607 (2001) 237-246 (<a href="https://arxiv.org/abs/hep-th/0102178">arXiv:hep-th/0102178</a>)</p>
 </li>
 </ul>
 </body></html>
@@ -921,14 +921,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October  7, 2018 at 13:27:04.
+  Last revised on October 10, 2018 at 13:45:21.
   See the <a href="https://ncatlab.org/nlab/history/RR field" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/RR+field" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/RR+field/14" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(14 revisions)</span> | <a href="/nlab/show/diff/RR+field" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/RR+field" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/RR+field" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/RR+field/15" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(15 revisions)</span> | <a href="/nlab/show/diff/RR+field" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/RR+field" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/RR field/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
