--- a/pages/19826.html
+++ b/pages/19826.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      Andree Ehresmann in nLab
+      Esquisses mathématiques in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -284,7 +284,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      Andree Ehresmann
+      Esquisses mathématiques
   </h1>
 
 
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/4516/#Item_3" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -311,47 +311,37 @@ margin-left: 0em;
     <html xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" xml:lang="en" lang="en">
 <head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title></title></head>
 <body>
-<h2 id="andre_charles_ehresmann">Andrée Charles Ehresmann</h2>
+<p><em>Esquisses Mathématiques</em> is a series of Paris-Amiens University reports published from 1970 to 1983 which contains more or less preliminary works, in particular theses of members of the research team <em>Théorie et Applications des Catégories</em> (Paris-Amiens), directed by Charles and Andrée Ehresmann</p>
 
-<p>Andrée Charles Ehresmann is a category theorist and the editor in chief of the journal <a class="existingWikiWord" href="/nlab/show/Cahiers+de+Topologie+et+G%C3%A9om%C3%A9trie+Diff%C3%A9rentielle+Cat%C3%A9goriques">Cahiers de Topologie et Géométrie Différentielle Catégoriques</a>, founded by her late husband <a class="existingWikiWord" href="/nlab/show/Charles+Ehresmann">Charles Ehresmann</a>. Andrée Ehresmann’s early papers were published under her maiden name Andrée Bastiani, and during a transition period under the hyphenated surname Bastiani-Ehresmann.</p>
+<p>Most of them are still available and can be obtained by sending an e-mail to <a class="existingWikiWord" href="/nlab/show/Andr%C3%A9e+Charles+Ehresmann">Andrée Charles Ehresmann</a>.</p>
 
-<ul>
-<li><a href="http://ehres.pagesperso-orange.fr/index.htm">website</a></li>
-
-<li><a href="http://fr.wikipedia.org/wiki/Andr%C3%A9e_Ehresmann">French Wikipedia</a></li>
-</ul>
-
-<h2 id="related_entries">Related entries</h2>
+<p>A list of titles is on the page linked below:</p>
 
 <ul>
-<li><a class="existingWikiWord" href="/nlab/show/Michal-Bastiani+smooth+map">Michal-Bastiani smooth map</a></li>
-
-<li><a class="existingWikiWord" href="/nlab/show/sketch">sketch</a></li>
-
-<li><a class="existingWikiWord" href="/nlab/show/monoidal+closed+category">monoidal closed category</a></li>
+<li><a href="http://ehres.pagesperso-orange.fr/Cahiers/EsquissesM.htm">Link</a></li>
 </ul>
-<div class="property">category: <a class="category_link" href="/nlab/all_pages/people">people</a></div></body></html>
+</body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on October 12, 2018 at 15:19:09.
-  See the <a href="https://ncatlab.org/nlab/history/Andree Ehresmann" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  Created on October 12, 2018 at 15:14:51.
+  See the <a href="https://ncatlab.org/nlab/history/Esquisses mathématiques" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Andree+Ehresmann" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Andree+Ehresmann/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/Andree+Ehresmann" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Andree+Ehresmann" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  | <a href="https://ncatlab.org/nlab/show/Andree Ehresmann/cite" style="color: black">Cite</a>
+  <a href="/nlab/edit/Esquisses+math%C3%A9matiques" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  | <a href="https://ncatlab.org/nlab/show/Esquisses mathématiques/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
-    <a href="/nlab/print/Andree+Ehresmann" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/Esquisses+math%C3%A9matiques" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/Andree+Ehresmann" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/Esquisses+math%C3%A9matiques" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/Andree+Ehresmann" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/Esquisses+math%C3%A9matiques" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
