--- a/pages/3480.html
+++ b/pages/3480.html
@@ -951,7 +951,7 @@ margin-left: 0em;
   \,.
 
 </annotation></semantics></math></div>
-<p>In particular do we have <a class="existingWikiWord" href="/nlab/show/natural+isomorphisms">natural isomorphisms</a> of <a class="existingWikiWord" href="/nlab/show/homotopy+group">homotopy group</a>s</p>
+<p>In particular we have <a class="existingWikiWord" href="/nlab/show/natural+isomorphisms">natural isomorphisms</a> of <a class="existingWikiWord" href="/nlab/show/homotopy+group">homotopy group</a>s</p>
 <div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msub><mi>π</mi> <mi>n</mi></msub><mi>End</mi><mo stretchy="false">(</mo><mi>LConst</mi><mo stretchy="false">(</mo><mi>X</mi><mo stretchy="false">)</mo><mover><mo>→</mo><mrow><msub><mi>F</mi> <mi>x</mi></msub></mrow></mover><mn>∞</mn><mi>Grpd</mi><mo stretchy="false">)</mo><mo>≃</mo><msub><mi>π</mi> <mi>n</mi></msub><mo stretchy="false">(</mo><mi>X</mi><mo>,</mo><mi>x</mi><mo stretchy="false">)</mo><mspace width="thinmathspace"></mspace><mo>.</mo></mrow><annotation encoding="application/x-tex">
   \pi_n End(LConst(X) \stackrel{F_x}{\to} \infty Grpd)
   \simeq
@@ -1133,24 +1133,28 @@ margin-left: 0em;
 <p>Tannaka duality for dg-categories is studied in</p>
 
 <ul>
-<li>J.P.Pridham, <em>Tannaka duality for enhanced triangulated categories</em>, <a href="http://arxiv.org/abs/1309.0637">arxiv/1309.0637</a></li>
-</ul>
+<li>
+<p>J.P.Pridham, <em>Tannaka duality for enhanced triangulated categories</em>, <a href="http://arxiv.org/abs/1309.0637">arxiv/1309.0637</a></p>
+</li>
 
-<p>mathOverflow: <a href="http://mathoverflow.net/questions/30453/does-the-tannaka-krein-theorem-come-from-an-equivalence-of-2-categories">does-the-tannaka-krein-theorem-come-from-an-equivalence-of-2-categories</a></p>
+<li>
+<p>MathOverflow, <a href="http://mathoverflow.net/questions/30453/does-the-tannaka-krein-theorem-come-from-an-equivalence-of-2-categories">Does the Tannaka-Krein theorem come from an equivalence of 2-categories?</a></p>
+</li>
+</ul>
 </body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on October  9, 2018 at 14:39:17.
+  Last revised on October 15, 2018 at 00:11:18.
   See the <a href="https://ncatlab.org/nlab/history/Tannaka duality" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Tannaka+duality" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Tannaka+duality/45" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(45 revisions)</span> | <a href="/nlab/show/diff/Tannaka+duality" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Tannaka+duality" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Tannaka+duality" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Tannaka+duality/46" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(46 revisions)</span> | <a href="/nlab/show/diff/Tannaka+duality" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Tannaka+duality" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Tannaka duality/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
