--- a/pages/19841.html
+++ b/pages/19841.html
@@ -325,17 +325,17 @@ margin-left: 0em;
 
 <p><h2 id='section_Introduction'>Introduction</h2></p>
 
-<p>The notion of a <em>blockchain</em>, originating with <a href="#NakomotoBitcoinAPeerToPeerElectronicCashSystem">(Nakomoto2008)</a>, allows for the creation of a linear log which can be added to, but is extremely difficult to otherwise modify, in a network with multiple nodes, without any central authority.</p>
+<p>The notion of a <em>blockchain</em>, originating with <a href="#NakomotoBitcoinAPeerToPeerElectronicCashSystem">(Nakomoto2008)</a>, allows for the creation of a linear log which can be added to, but is extremely difficult to otherwise modify, in a <a class="existingWikiWord" href="/nlab/show/undirected+graph">network</a> with multiple nodes, without any central authority.</p>
 
 <p><h2 id='section_Proof_of_work'>Proof of work</h2></p>
 
-<p>The key idea is that of <em>proof of work</em>. For the moment, let us think of a blockchain simply as a list <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">[</mo><msub><mi>B</mi> <mn>1</mn></msub><mo>,</mo><msub><mi>B</mi> <mn>2</mn></msub><mo>,</mo><mi>…</mi><mo stretchy="false">]</mo></mrow><annotation encoding="application/x-tex">[ B_{1}, B_{2}, \ldots ]</annotation></semantics></math> of ‘blocks’. A <em>block</em> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>B</mi></mrow><annotation encoding="application/x-tex">B</annotation></semantics></math> is an <em>unencrypted block</em> of content, which could be anything, together with a cryptographic hash of it with certain properties.</p>
+<p>The key idea is that of <em>proof of work</em>. Think of a blockchain simply as a <a class="existingWikiWord" href="/nlab/show/list">list</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">[</mo><msub><mi>B</mi> <mn>1</mn></msub><mo>,</mo><msub><mi>B</mi> <mn>2</mn></msub><mo>,</mo><mi>…</mi><mo stretchy="false">]</mo></mrow><annotation encoding="application/x-tex">[ B_{1}, B_{2}, \ldots ]</annotation></semantics></math> of ‘blocks’. A <em>block</em> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>B</mi></mrow><annotation encoding="application/x-tex">B</annotation></semantics></math> is an <em>unencrypted block</em> of content, which could be anything, together with a <em>cryptographic hash</em> of it (‘signature’) with certain properties.</p>
 
 <p>The key points are the following.</p>
 
 <ol>
 <li>
-<p>The cryptographic hash with the required properties is hard to create, where ‘hard’ means requiring significant computational resources (e.g. something like prime factorisation). Use of these computational resources to create the hash is referred to as ‘proof of work’.</p>
+<p>The cryptographic hash with the required properties is hard to create, where ‘hard’ means requiring significant computational resources and takes time (e.g. something like <a class="existingWikiWord" href="/nlab/show/prime">prime</a> factorisation). Use of these computational resources to create the hash is referred to as ‘proof of work’.</p>
 </li>
 
 <li>
@@ -347,7 +347,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p>It is easy (requiring little resources) to check that a particular hash has the required properties.</p>
+<p>It is easy (requires little resources and time) to check that a particular hash has the required properties.</p>
 </li>
 </ol>
 
@@ -359,7 +359,7 @@ margin-left: 0em;
 
 <p><h2 id='section_Criticisms'>Criticisms</h2></p>
 
-<p>While in its way ingenious, the use of proof of work underlying the notion of a blockchain is rather crude. Enormous amounts of electricity, for example, are being consumed by large blockchain networks such as bitcoin during proof of work, whilst the outcome of that proof of work is typically useless. This is not sustainable.</p>
+<p>While in its way ingenious, the use of proof of work underlying the notion of a blockchain is rather crude. Enormous amounts of electricity, for example, are <a href="https://digiconomist.net/bitcoin-energy-consumption">being consumed</a> by large blockchain networks such as bitcoin during proof of work, whilst the outcome of that proof of work is typically useless. This is not sustainable.</p>
 
 <p>A different criticism regards the algorithm itself. If nodes were to co-operate in such a way that they controlled over 50% of the computational power on the network, a tampering attempt would eventually be able to ‘catch up’ with the honest additions to the blockchain.</p>
 
@@ -372,14 +372,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Created on October 15, 2018 at 04:57:36.
+  Last revised on October 15, 2018 at 05:43:38.
   See the <a href="https://ncatlab.org/nlab/history/blockchain" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/blockchain" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/blockchain" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/blockchain/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/blockchain" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/blockchain" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/blockchain/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
