--- a/pages/3842.html
+++ b/pages/3842.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/1084/#Item_18" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/1084/#Item_19" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -792,13 +792,15 @@ margin-left: 0em;
 
 <h3 id="characterization">Characterization</h3>
 
-<div class="num_thm">
+<p>The following <a class="existingWikiWord" href="/nlab/show/Giraud+theorem">Giraud like</a> theorem stems from <a class="existingWikiWord" href="/nlab/show/Marta+Bunge">Marta Bunge's</a> dissertation (1966)</p>
+
+<div class="num_prop" id="bunge_theorem">
 <h6 id="theorem">Theorem</h6>
 
 <p>A category <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>E</mi></mrow><annotation encoding="application/x-tex">E</annotation></semantics></math> is equivalent to a presheaf topos if and only if it is cocomplete, <a class="existingWikiWord" href="/nlab/show/atomic+category">atomic</a>, and <a class="existingWikiWord" href="/nlab/show/regular+category">regular</a>.</p>
 </div>
 
-<p>This is due to <a class="existingWikiWord" href="/nlab/show/Marta+Bunge">Marta Bunge</a>.</p>
+<p>A proof as well as a second characterization using <a class="existingWikiWord" href="/nlab/show/exact+completion">exact completions</a> can be found in Carboni-Vitale (<a href="#CarboniVitale98">1998</a>) or Centazzo-Vitale (<a href="#Centazzo-Vitale04">2004</a>). The first paper has also an interesting comparison to a classical characterization of categories <a class="existingWikiWord" href="/nlab/show/monadic+category">monadic</a> over Set.</p>
 
 <h3 id="cartesian_closed_monoidal_structure">Cartesian closed monoidal structure</h3>
 
@@ -963,20 +965,32 @@ margin-left: 0em;
 <p><a class="existingWikiWord" href="/nlab/show/Saunders+Mac+Lane">Saunders Mac Lane</a>, <a class="existingWikiWord" href="/nlab/show/Ieke+Moerdijk">Ieke Moerdijk</a>, <em><a class="existingWikiWord" href="/nlab/show/Sheaves+in+Geometry+and+Logic">Sheaves in Geometry and Logic</a></em> , Springer Heidelberg 1994.</p>
 </li>
 </ul>
+
+<p>The characterizations of categories of presheaves are discussed in</p>
+
+<ul>
+<li id="CarboniVitale98">
+<p><a class="existingWikiWord" href="/nlab/show/Aurelio+Carboni">A. Carboni</a>, <a class="existingWikiWord" href="/nlab/show/Enrico+Vitale">E. M. Vitale</a>, <em>Regular and exact completions</em> , JPAA <strong>125</strong> (1998) pp.79-116.</p>
+</li>
+
+<li id="CentazzoVitale04">
+<p>C. Centazzo, <a class="existingWikiWord" href="/nlab/show/Enrico+Vitale">E. M. Vitale</a>, <em>Sheaf theory</em> , pp.311-358 in Pedicchio, Tholen (eds.), <em>Categorical Foundations</em> , Cambridge UP 2004. (<a href="https://perso.uclouvain.be/enrico.vitale/chapter7.pdf">draft</a>)</p>
+</li>
+</ul>
 </body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on October  4, 2018 at 06:40:21.
+  Last revised on October 16, 2018 at 07:59:07.
   See the <a href="https://ncatlab.org/nlab/history/category of presheaves" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/category+of+presheaves" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/category+of+presheaves/23" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(23 revisions)</span> | <a href="/nlab/show/diff/category+of+presheaves" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/category+of+presheaves" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/category+of+presheaves" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/category+of+presheaves/24" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(24 revisions)</span> | <a href="/nlab/show/diff/category+of+presheaves" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/category+of+presheaves" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/category of presheaves/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
