--- a/pages/19719.html
+++ b/pages/19719.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9044/#Item_4" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9044/#Item_5" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -401,9 +401,9 @@ margin-left: 0em;
 
 <li><span class="newWikiWord">Stephan Spahn<a href="/nlab/new/Stephan+Spahn">?</a></span></li>
 
-<li><a class="existingWikiWord" href="/nlab/show/Matthew+Weaver">Matthew Weaver</a>
-<p><em> <span class="newWikiWord">Jonathan Weinberger<a href="/nlab/new/Jonathan+Weinberger">?</a></span></em></p>
-</li>
+<li><a class="existingWikiWord" href="/nlab/show/Matthew+Weaver">Matthew Weaver</a></li>
+
+<li><span class="newWikiWord">Jonathan Weinberger<a href="/nlab/new/Jonathan+Weinberger">?</a></span></li>
 
 <li><span class="newWikiWord">tslil clingman<a href="/nlab/new/tslil+clingman">?</a></span></li>
 
@@ -421,14 +421,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October  9, 2018 at 08:11:27.
+  Last revised on October 18, 2018 at 11:13:58.
   See the <a href="https://ncatlab.org/nlab/history/Initiality Project" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Initiality+Project" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Initiality+Project/29" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(29 revisions)</span> | <a href="/nlab/show/diff/Initiality+Project" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Initiality+Project" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Initiality+Project" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Initiality+Project/30" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(30 revisions)</span> | <a href="/nlab/show/diff/Initiality+Project" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Initiality+Project" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Initiality Project/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
